--- a/pageDua.html
+++ b/pageDua.html
@@ -25,7 +25,7 @@
             <div class="kolomKiri">
                 <img src="img/Wonderful_Indonesia_logo.png" alt="">
                 <h1>NUSA PENIDA ISLAND</h1>
-                <p>BALI, INDONESIA.</p>
+                <p><span>BALI, INDONESIA.</span></p>
 
                 <div>
                     <button class="button"><a href="#detail"><span>DETAIL </span></a>
